@@ -1,6 +1,5 @@
 package name.abuchen.portfolio.ui.util;
 
-import java.lang.reflect.Type;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -10,6 +9,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.UUID;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -25,11 +25,11 @@ import org.eclipse.jface.window.Window;
 import org.eclipse.swt.graphics.Image;
 import org.eclipse.swt.widgets.Display;
 
-import com.google.gson.Gson;
-import com.google.gson.reflect.TypeToken;
-
 import name.abuchen.portfolio.model.Account;
 import name.abuchen.portfolio.model.Client;
+import name.abuchen.portfolio.model.ConfigurationSet;
+import name.abuchen.portfolio.model.ConfigurationSet.Configuration;
+import name.abuchen.portfolio.model.ConfigurationSet.WellKnownConfigurationSets;
 import name.abuchen.portfolio.model.Portfolio;
 import name.abuchen.portfolio.snapshot.filter.ClientFilter;
 import name.abuchen.portfolio.snapshot.filter.PortfolioClientFilter;
@@ -41,15 +41,29 @@ public final class ClientFilterMenu implements IMenuListener
 {
     public static class Item
     {
-        String label;
-        String uuids;
-        transient ClientFilter filter; // NOSONAR Gson serialization
+        /** unique and stable identifier for a filter */
+        private final String id;
 
-        public Item(String label, String uuids, ClientFilter filter)
+        /** user-provided label or automatically constructed label */
+        private String label;
+
+        /** comma separated list of account or portfolio uuids */
+        private String uuids;
+
+        // transient to avoid Gson serialization
+        private transient ClientFilter filter; // NOSONAR
+
+        public Item(String id, String label, String uuids, ClientFilter filter)
         {
+            this.id = id;
             this.label = label;
             this.uuids = Objects.requireNonNull(uuids);
             this.filter = filter;
+        }
+
+        public String getId()
+        {
+            return id;
         }
 
         public String getLabel()
@@ -66,7 +80,7 @@ public final class ClientFilterMenu implements IMenuListener
         {
             return uuids;
         }
-        
+
         public void setUUIDs(String uuids)
         {
             this.uuids = uuids;
@@ -84,9 +98,6 @@ public final class ClientFilterMenu implements IMenuListener
         }
     }
 
-    public static final String PREF_KEY_POSTFIX = "-client-filter"; //$NON-NLS-1$
-    private static final String PREF_KEY = ClientFilterDropDown.class.getSimpleName() + "@json"; //$NON-NLS-1$
-
     private static final int MAXIMUM_NO_CUSTOM_ITEMS = 30;
 
     private final Client client;
@@ -96,18 +107,24 @@ public final class ClientFilterMenu implements IMenuListener
     private List<Item> defaultItems = new ArrayList<>();
     private LinkedList<Item> customItems = new LinkedList<>();
     private Item selectedItem;
+    private ConfigurationSet filterConfig;
 
     public ClientFilterMenu(Client client, IPreferenceStore preferences)
     {
         this.client = client;
         this.preferences = preferences;
+        this.filterConfig = client.getSettings()
+                        .getConfigurationSet(WellKnownConfigurationSets.CLIENT_FILTER_DEFINITIONS);
 
-        selectedItem = new Item(Messages.PerformanceChartLabelEntirePortfolio, "", ClientFilter.NO_FILTER); //$NON-NLS-1$
+        selectedItem = new Item("", Messages.PerformanceChartLabelEntirePortfolio, "", //$NON-NLS-1$ //$NON-NLS-2$
+                        ClientFilter.NO_FILTER);
         defaultItems.add(selectedItem);
 
         client.getActivePortfolios().forEach(portfolio -> {
-            defaultItems.add(new Item(portfolio.getName(), portfolio.getUUID(), new PortfolioClientFilter(portfolio)));
-            defaultItems.add(new Item(portfolio.getName() + " + " + portfolio.getReferenceAccount().getName(), //$NON-NLS-1$
+            defaultItems.add(new Item(portfolio.getUUID(), portfolio.getName(), portfolio.getUUID(),
+                            new PortfolioClientFilter(portfolio)));
+            defaultItems.add(new Item(portfolio.getUUID() + "," + portfolio.getReferenceAccount().getUUID(), //$NON-NLS-1$
+                            portfolio.getName() + " + " + portfolio.getReferenceAccount().getName(), //$NON-NLS-1$
                             portfolio.getUUID() + "," + portfolio.getReferenceAccount().getUUID(), //$NON-NLS-1$
                             new PortfolioClientFilter(portfolio, portfolio.getReferenceAccount())));
         });
@@ -123,47 +140,9 @@ public final class ClientFilterMenu implements IMenuListener
 
     private void loadCustomItems()
     {
-        String json = preferences.getString(PREF_KEY); // $NON-NLS-1$
-        if (json != null && !json.isEmpty())
-        {
-            loadCustomItemsFromJSON(json);
-        }
-        else
-        {
-            String code = preferences.getString(ClientFilterDropDown.class.getSimpleName());
-            if (code != null && !code.isEmpty())
-                loadCustomItemsLegacy(code);
-        }
-    }
-
-    private void loadCustomItemsFromJSON(String json)
-    {
-        Type listType = new TypeToken<ArrayList<Item>>()
-        {
-        }.getType();
-        List<Item> fromJson = new Gson().fromJson(json, listType);
-
-        if (fromJson.isEmpty())
-            return;
-
-        for (Item item : fromJson)
-        {
-            buildItem(item.uuids).ifPresent(i -> {
-                i.label = item.label;
-                customItems.add(i);
-            });
-        }
-    }
-
-    private void loadCustomItemsLegacy(String code)
-    {
-        Map<String, Object> uuid2object = new HashMap<>();
-        client.getPortfolios().forEach(p -> uuid2object.put(p.getUUID(), p));
-        client.getAccounts().forEach(a -> uuid2object.put(a.getUUID(), a));
-
-        String[] items = code.split(";"); //$NON-NLS-1$
-        for (String item : items)
-            buildItem(item).ifPresent(i -> customItems.add(i));
+        filterConfig.getConfigurations().forEach(conf -> {
+            buildItem(conf.getUUID(), conf.getName(), conf.getData(), client).ifPresent(i -> customItems.add(i));
+        });
     }
 
     @Override
@@ -182,10 +161,6 @@ public final class ClientFilterMenu implements IMenuListener
         customItems.forEach(item -> {
             Action action = new SimpleAction(item.label, a -> {
                 selectedItem = item;
-
-                customItems.remove(item);
-                customItems.addFirst(item);
-
                 listeners.forEach(l -> l.accept(item.filter));
             });
             action.setChecked(item.equals(selectedItem));
@@ -196,10 +171,11 @@ public final class ClientFilterMenu implements IMenuListener
         manager.add(new SimpleAction(Messages.LabelClientFilterNew, a -> createCustomFilter()));
         manager.add(new SimpleAction(Messages.LabelClientFilterManage, a -> editCustomFilter()));
 
-        manager.add(new SimpleAction(Messages.LabelClientClearCustomItems, a -> {           
-            if (!MessageDialog.openConfirm(Display.getDefault().getActiveShell(), Messages.LabelClientClearCustomItems, Messages.LabelClientClearCustomItems + "?")) //$NON-NLS-1$
+        manager.add(new SimpleAction(Messages.LabelClientClearCustomItems, a -> {
+            if (!MessageDialog.openConfirm(Display.getDefault().getActiveShell(), Messages.LabelClientClearCustomItems,
+                            Messages.LabelClientClearCustomItems + "?")) //$NON-NLS-1$
                 return;
-            
+
             if (customItems.contains(selectedItem))
             {
                 selectedItem = defaultItems.get(0);
@@ -207,8 +183,8 @@ public final class ClientFilterMenu implements IMenuListener
             }
 
             customItems.clear();
-            preferences.setToDefault(PREF_KEY);
-            preferences.setToDefault(ClientFilterDropDown.class.getSimpleName());
+            filterConfig.clear();
+            client.touch();
         }));
     }
 
@@ -228,16 +204,23 @@ public final class ClientFilterMenu implements IMenuListener
         dialog.setItems(customItems);
         dialog.open();
 
-        preferences.putValue(PREF_KEY, new Gson().toJson(customItems));
+        // store changed filters. keep in mind: filters could be deleted or
+        // filter data changed. So first delete all stored filters and store
+        // current ones
+        filterConfig.clear();
+        customItems.forEach(cf -> filterConfig.add(new Configuration(cf.getId(), cf.getLabel(), cf.getUUIDs())));
+        client.touch();
 
         if (isCustomItemSelected)
         {
-            // previously selected custom filter was deleted in dialog --> select default filter item
+            // previously selected custom filter was deleted in dialog -->
+            // select default filter item
             if (!customItems.contains(selectedItem))
                 selectedItem = defaultItems.get(0);
 
-            // always update listeners (when custom filter selected) because filter may have been changed in edit filter dialog
-            // or default filter was set because selected filter was deleted 
+            // always update listeners (when custom filter selected) because
+            // filter may have been changed in edit filter dialog
+            // or default filter was set because selected filter was deleted
             listeners.forEach(l -> l.accept(selectedItem.filter));
         }
     }
@@ -268,7 +251,7 @@ public final class ClientFilterMenu implements IMenuListener
             Object[] selected = dialog.getResult();
             if (selected.length > 0)
             {
-                Item newItem = buildItem(selected);
+                Item newItem = buildItem(UUID.randomUUID().toString(), dialog.getProperty(), selected);
 
                 String label = dialog.getProperty();
                 if (!label.isEmpty())
@@ -280,14 +263,15 @@ public final class ClientFilterMenu implements IMenuListener
                 if (customItems.size() > MAXIMUM_NO_CUSTOM_ITEMS)
                     customItems.removeLast();
 
-                preferences.putValue(PREF_KEY, new Gson().toJson(customItems));
+                filterConfig.add(new Configuration(newItem.getId(), newItem.getLabel(), newItem.getUUIDs()));
+                client.touch();
 
                 listeners.forEach(l -> l.accept(newItem.filter));
             }
         }
     }
 
-    private Optional<Item> buildItem(String uuids)
+    public static Optional<Item> buildItem(String id, String name, String uuids, Client client)
     {
         if (uuids == null || uuids.isEmpty())
             return Optional.empty();
@@ -300,21 +284,23 @@ public final class ClientFilterMenu implements IMenuListener
         client.getPortfolios().forEach(p -> uuid2object.put(p.getUUID(), p));
         client.getAccounts().forEach(a -> uuid2object.put(a.getUUID(), a));
 
-        return Optional.of(buildItem(Arrays.stream(ids).map(uuid2object::get).filter(Objects::nonNull).toArray()));
+        return Optional.of(buildItem(id, name,
+                        Arrays.stream(ids).map(uuid2object::get).filter(Objects::nonNull).toArray()));
     }
 
-    private Item buildItem(Object[] selected)
+    private static Item buildItem(String ident, String label, Object[] selected)
     {
-        List<Portfolio> portfolios = Arrays.stream(selected).filter(o -> o instanceof Portfolio).map(o -> (Portfolio) o)
-                        .collect(Collectors.toList());
-        List<Account> accounts = Arrays.stream(selected).filter(o -> o instanceof Account).map(o -> (Account) o)
-                        .collect(Collectors.toList());
+        List<Portfolio> portfolios = Arrays.stream(selected).filter(Portfolio.class::isInstance).map(o -> (Portfolio) o)
+                        .toList();
+        List<Account> accounts = Arrays.stream(selected).filter(Account.class::isInstance).map(o -> (Account) o)
+                        .toList();
 
-        String label = Arrays.stream(selected).map(String::valueOf).collect(Collectors.joining(", ")); //$NON-NLS-1$
+        if (label.isEmpty())
+            label = Arrays.stream(selected).map(String::valueOf).collect(Collectors.joining(", ")); //$NON-NLS-1$
 
         String uuids = buildUUIDs(selected);
 
-        return new Item(label, uuids, new PortfolioClientFilter(portfolios, accounts));
+        return new Item(ident, label, uuids, new PortfolioClientFilter(portfolios, accounts));
     }
 
     public static String buildUUIDs(Object[] selected)
@@ -359,4 +345,39 @@ public final class ClientFilterMenu implements IMenuListener
         selectedItem = item;
     }
 
+    public void trackSelectedFilterConfigurationKey(String key)
+    {
+        selectClientFilter(key);
+
+        this.addListener(filter -> saveSelectedFilter(client, key, this.getSelectedItem().getId()));
+    }
+
+    public void selectClientFilter(String configurationKey)
+    {
+        getSelectedFilterId(client, configurationKey).ifPresent(clientFilterId -> this.getAllItems()
+                        .filter(item -> item.getId().equals(clientFilterId)).findAny().ifPresent(this::select));
+    }
+
+    public Optional<Item> selectItemFromClientFilterId(String clientFilterId)
+    {
+        Optional<Item> optionalItem = this.getAllItems().filter(item -> item.getId().equals(clientFilterId)).findAny();
+        optionalItem.ifPresent(this::select);
+        return optionalItem;
+    }
+
+    public static void saveSelectedFilter(Client client, String key, String clientFilterId)
+    {
+        var set = client.getSettings().getConfigurationSet(WellKnownConfigurationSets.CLIENT_FILTER_SELECTION);
+
+        set.lookup(key).ifPresentOrElse(config -> config.setData(clientFilterId),
+                        () -> set.add(new Configuration(key, "", clientFilterId))); //$NON-NLS-1$
+
+        client.touch();
+    }
+
+    public static Optional<String> getSelectedFilterId(Client client, String key)
+    {
+        return client.getSettings().getConfigurationSet(WellKnownConfigurationSets.CLIENT_FILTER_SELECTION)
+                        .lookup(key).map(Configuration::getData);
+    }
 }
