@@ -1,10 +1,11 @@
 package name.abuchen.portfolio.ui.views;
 
+import static name.abuchen.portfolio.util.CollectorsUtil.toMutableList;
+
 import java.io.IOException;
 import java.text.MessageFormat;
 import java.time.LocalDate;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -104,6 +105,7 @@ import name.abuchen.portfolio.ui.views.columns.TaxonomyColumn;
 import name.abuchen.portfolio.ui.views.columns.WknColumn;
 import name.abuchen.portfolio.ui.wizards.events.CustomEventWizard;
 import name.abuchen.portfolio.ui.wizards.security.EditSecurityDialog;
+import name.abuchen.portfolio.ui.wizards.security.FindQuoteProviderDialog;
 import name.abuchen.portfolio.ui.wizards.splits.StockSplitWizard;
 import name.abuchen.portfolio.util.Interval;
 import name.abuchen.portfolio.util.Pair;
@@ -207,7 +209,7 @@ public final class SecuritiesTable implements ModificationListener
         addQuoteDeltaColumn();
         support.addColumn(new DistanceFromMovingAverageColumn(LocalDate::now));
         support.addColumn(new DistanceFromAllTimeHighColumn(LocalDate::now,
-                        new ArrayList<>(view.getPart().getReportingPeriods())));
+                        view.getPart().getReportingPeriods().stream().collect(toMutableList())));
 
         for (Taxonomy taxonomy : getClient().getTaxonomies())
         {
@@ -556,7 +558,7 @@ public final class SecuritiesTable implements ModificationListener
     {
         // create a modifiable copy as all menus share the same list of
         // reporting periods
-        List<ReportingPeriod> options = new ArrayList<>(view.getPart().getReportingPeriods());
+        List<ReportingPeriod> options = view.getPart().getReportingPeriods().stream().collect(toMutableList());
 
         BiFunction<Object, ReportingPeriod, Double> valueProvider = (element, option) -> {
 
@@ -935,8 +937,17 @@ public final class SecuritiesTable implements ModificationListener
         {
             manager.add(new SimpleAction(
                             MessageFormat.format(Messages.SecurityMenuUpdateQuotesMultipleSecurities, selection.size()),
-                            a -> new UpdateQuotesJob(getClient(), Arrays.stream(selection.toArray())
-                                            .map(Security.class::cast).collect(Collectors.toList())).schedule()));
+                            a -> new UpdateQuotesJob(getClient(),
+                                            selection.toList().stream().map(Security.class::cast).toList())
+                                                            .schedule()));
+
+            manager.add(new SimpleAction(Messages.LabelSearchForQuoteFeeds + "...", //$NON-NLS-1$
+                            a -> Display.getDefault().asyncExec(() -> {
+                                FindQuoteProviderDialog dialog = new FindQuoteProviderDialog(getShell(), getClient(),
+                                                selection.toList().stream().map(Security.class::cast).toList());
+                                dialog.open();
+                            })));
+
         }
 
         // if any retired security in selection, add "unretire/activate all"
@@ -1050,7 +1061,7 @@ public final class SecuritiesTable implements ModificationListener
             @Override
             Dialog createDialog(Security security)
             {
-                StockSplitWizard wizard = new StockSplitWizard(getClient(), security);
+                StockSplitWizard wizard = new StockSplitWizard(view.getStylingEngine(), getClient(), security);
                 return new WizardDialog(getShell(), wizard);
             }
         });
@@ -1060,7 +1071,7 @@ public final class SecuritiesTable implements ModificationListener
             @Override
             Dialog createDialog(Security security)
             {
-                CustomEventWizard wizard = new CustomEventWizard(getClient(), security);
+                CustomEventWizard wizard = new CustomEventWizard(view.getStylingEngine(), getClient(), security);
                 return new WizardDialog(getShell(), wizard);
             }
         });
